Update for cocoon 2.1.4
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9229 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/cocoon_upgrade/local.blocks.properties
+++ b/etc/cocoon_upgrade/local.blocks.properties
@@ -1,3 +1,4 @@
+
 #------------------------------------------------------------------------------#
 #                             Cocoon Blocks                                    #
 #------------------------------------------------------------------------------#
@@ -22,13 +23,13 @@
 # can depend on.
 
 #-----[dependency]: "authentication-fw" depends on "session-fw".
-#-----[dependency]: "authentication-fw" is needed by "portal", "portal-fw", "slide".
+#-----[dependency]: "authentication-fw" is needed by "portal", "portal-fw".
 exclude.block.authentication-fw=true
 #-----[dependency]: "batik" is needed by "fop", "scratchpad".
 #exclude.block.batik=true
 exclude.block.bsf=true
 #exclude.block.chaperon=true
-#-----[dependency]: "databases" is needed by "hsqldb", "jms", "petstore", "repository", "xmldb".
+#-----[dependency]: "databases" is needed by "hsqldb", "jms", "ojb", "petstore", "repository", "xmldb".
 exclude.block.databases=true
 #-----[dependency]: "fop" depends on "batik".
 #exclude.block.fop=true
@@ -42,8 +43,9 @@ exclude.block.jfor=true
 exclude.block.jsp=true
 exclude.block.jxforms=true
 #exclude.block.linkrewriter=true
-exclude.block.lucene=true
+#exclude.block.lucene=true
 exclude.block.naming=true
+exclude.block.paranoid=true
 exclude.block.php=true
 exclude.block.poi=true
 #-----[dependency]: "portal-fw" depends on "authentication-fw", "session-fw".
@@ -69,6 +71,7 @@ exclude.block.xmldb=true
 # its development as things might change over time before they are marked
 # stable.
 
+#-----[dependency]: "apples" depends on "woody".
 exclude.block.apples=true
 #-----[dependency]: "asciiart" is needed by "mail".
 #exclude.block.asciiart=true
@@ -76,15 +79,16 @@ exclude.block.axis=true
 #-----[dependency]: "cron" is needed by "scratchpad".
 exclude.block.cron=true
 exclude.block.deli=true
-#-----[dependency]: "eventcache" is needed by "jms", "repository".
+#-----[dependency]: "eventcache" is needed by "jms", "repository", "slide".
 exclude.block.eventcache=true
 #-----[dependency]: "jms" depends on "databases", "eventcache", "hsqldb".
+#-----[dependency]: "jms" is needed by "slide".
 exclude.block.jms=true
-#exclude.block.linotype=true
+exclude.block.linotype=true
 #-----[dependency]: "mail" depends on "asciiart".
 exclude.block.mail=true
 exclude.block.midi=true
-#-----[warning]: Before including the "ojb" block, see: http://wiki.cocoondev.org/Wiki.jsp?page=OJBBlock
+#-----[dependency]: "ojb" depends on "databases".
 exclude.block.ojb=true
 #-----[dependency]: "petstore" depends on "databases", "hsqldb", "velocity", "woody".
 exclude.block.petstore=true
@@ -98,14 +102,14 @@ exclude.block.qdox=true
 exclude.block.repository=true
 #-----[dependency]: "scratchpad" depends on "batik", "cron", "velocity".
 exclude.block.scratchpad=true
-#-----[dependency]: "slide" depends on "authentication-fw", "repository".
+#-----[dependency]: "slide" depends on "eventcache", "jms", "repository".
 exclude.block.slide=true
 exclude.block.slop=true
 exclude.block.stx=true
 exclude.block.taglib=true
 #-----[dependency]: "webdav" depends on "repository".
 exclude.block.webdav=true
-#-----[dependency]: "woody" is needed by "petstore".
+#-----[dependency]: "woody" is needed by "apples", "petstore".
 exclude.block.woody=true
 
 # Deprecated blocks ------------------------------------------------------------
