Make the jar and use the version number.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9262 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/forrestdoc/build.properties
+++ b/scratchpad/forrestdoc/build.properties
@@ -1,3 +1,4 @@
+version=0.1-dev
 src.dir=./src/java
 ant.src.dir=./src/ant
 resources.dir=./src/resources
@@ -9,3 +10,5 @@ lib.dir=./lib
 build.classes.dir=${build.dir}/classes
    
 ws.dir=../../..
+
+jar.name=xml-forrest-scratchpad-forrestdoc
