--- a/scratchpad/forrestdoc/build.xml
+++ b/scratchpad/forrestdoc/build.xml
@@ -41,10 +41,10 @@
              classpathref="lib.classpath" />
    </target>
 
-   <target name="dist" depends="compile"
-           description="Put everything in ${target} into the xml-forrestdoc.jar file">   
+   <target name="jar" depends="compile"
+           description="Put everything in ${target} into the ${jar.name}.jar file">   
       <mkdir dir="${dist.dir}" />
-      <jar jarfile="${dist.dir}/xml-forrestdoc.jar"
+      <jar jarfile="${dist.dir}/${jar.name}-${version}.jar"
            basedir="${build.classes.dir}" />
    </target>
 
