Jar also the Ant tools.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9269 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/forrestdoc/build.xml
+++ b/scratchpad/forrestdoc/build.xml
@@ -46,6 +46,8 @@
       <mkdir dir="${dist.dir}" />
       <jar jarfile="${dist.dir}/${jar.name}-${version}.jar"
            basedir="${build.classes.dir}" />
+      <jar jarfile="${dist.dir}/${jar.name}-anttools-${version}.jar"
+           basedir="${ant.build.dir}" />
    </target>
 
    <target name="clean"
