--- a/src/core/fresh-site/forrest.properties
+++ b/src/core/fresh-site/forrest.properties
@@ -83,3 +83,5 @@
 # server, set to -Djava.awt.headless=true
 #forrest.jvmargs=
 #project.bugtracking-url=http://nagoya.apache.org/bugzilla/show_bug.cgi?id=
+#I18n Property only works for the "forrest run" target.
+#project.i18n=true
