update docs for SVN
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9342 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/documentation/content/xdocs/build.xml
+++ b/src/documentation/content/xdocs/build.xml
@@ -8,52 +8,17 @@
     <section id="getting_from_source">
       <title>Getting the Forrest source</title>
       <section>
-        <title>Step-by-step cvs instructions for Windows</title>
+        <title>Step-by-step Subversion (SVN) instructions</title>
+          <note>If you are behind a proxy, see <link 
+href="http://subversion.tigris.org/project_faq.html#proxy">this FAQ</link>.</note>
         <ol> 
-          <li>Download a recent release of WinCVS (homepage is
-            <link href="http://www.wincvs.org/">http://www.wincvs.org/</link>); </li> 
-          <li>Install it;</li> 
-          <li>Start it;</li> 
-          <li>Click on Admin-&gt;Preferences;</li> 
-          <li> In "Enter the CVSROOT:" enter
-            "<code>:pserver:anoncvs@cvs.apache.org:/home/cvspublic</code>" (without
-            quotes);</li> 
-          <li>In "Authentication:" choose "passwd file on the cvs server";</li> 
-          <li>Click "Ok";</li> 
-          <li>Click Admin-&gt;Login;</li> 
-          <li> When asked for the password: answer "<code>anoncvs</code>"
-            (without quotes);</li> 
-          <li> Click "Create-&gt;Checkout module";</li> 
-          <li>Module name and path on the server is "<code>xml-forrest</code>"
-            (no quotes);</li> 
-          <li>Choose a dir to put the source code in;</li> 
-          <li>Click "Ok";</li> 
-          <li>If everything goes well, messages will start to appear in the log
-            window;</li> 
-          <li>Wait until you see "<code>*****CVS exited normally with code
-              0*****</code>" in the log window;</li> 
-          <li>The Forrest source is now on your harddrive.</li> 
+          <li>Make sure you have a recent release of <link href="http://subversion.tigris.org/">Subversion</link> installed.</li>
+          <li>At a command prompt, enter "<code>svn co https://svn.apache.org/repos/asf/xml/forrest/trunk forrest</code>"</li>
+          <li>This will create a directory called "<code>forrest</code>" where the Forrest source will be stored.</li> 
         </ol> 
-      </section> 
-      <section>
-        <title>Step-by-step cvs instructions for Unix</title>
-        <ol> 
-          <li>Make sure you have a CVS client package installed on your Unix
-            system.</li> 
-          <li>Start the shell of your choice.</li> 
-          <li>Enter "<code>cvs -d
-              :pserver:anoncvs@cvs.apache.org:/home/cvspublic login</code>".</li> 
-          <li>When asked for the password: answer "<code>anoncvs</code>".</li> 
-          <li>Enter "<code>cvs -d
-              :pserver:anoncvs@cvs.apache.org:/home/cvspublic -z3 checkout
-              xml-forrest</code>". This will create a directory called
-            "<code>xml-forrest</code>" where the Forrest source will be stored.</li> 
-          <li>Wait until cvs has finished.</li> 
-          <li>The Forrest source is now on your harddrive.</li> 
-        </ol> 
-        <p>In case you want to update your Forrest source tree to the current
-          version, change to the "<code>xml-forrest</code>" directory and invoke
-          "<code>cvs -z3 update -d -P</code>".</p> 
+        <p>In case you want to update your Forrest source tree to the current version, change to the 
+"<code>forrest</code>" directory and invoke "<code>svn up</code>".</p> 
+        <p>To see what changes you've made, invoke "<code>svn stat</code>"</p>
       </section> 
     </section>
 
@@ -85,7 +50,7 @@
        You now have the binary distribution built in <code>build/dist/shbat</code>.
        Copy it somewhere more sensible if you like (e.g.
        <code>/usr/local/forrest</code> on Unix), though if you intend to update your
-       Forrest from CVS, leaving it where it is would be best.</p>
+       Forrest from SVN, leaving it where it is would be best.</p>
      <p>
        As the message says, you need to add the distribution's <code>bin/</code>
        ("binary") directory to your PATH variable, so the <code>'forrest'</code>
@@ -96,7 +61,7 @@
 ~/apache/xml-forrest$ export PATH=$PATH:$FORREST_HOME/bin
      </source>
      <p>
-       After updating the Forrest source from CVS, or after you have made changes, you
+       After updating the Forrest source from SVN, or after you have made changes, you
        will need to build forrest again.  In Windows, run <code>build clean</code> then
        <code>build</code>.  In Unix, run <code>./build.sh clean</code> then <code>./build.sh</code>
      </p>
