long overdue update; uses osuser for user authentication, associate groups of users & projects, session-length authentication, build & deploy buttons work, probably more that I forgot about
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9532 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/forrestbot2/webapp/src/conf/settings.properties
+++ b/scratchpad/forrestbot2/webapp/src/conf/settings.properties
@@ -1,28 +1,12 @@
-# Copyright 2004 The Apache Software Foundation
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 # settings.properties is used to configure the webapp to look
 # in certain locations for files and directories
 #
-# all of the following must be absolute
+# all of the following should be absolute
 #
 # forrest executable
 #forrest-exec=/path/to/xml-forrest/bin/forrest
 #forrest-exec=d:/path/to/xml-forrest/bin/forrest.bat
 #
-# this file is created by the webapp and used by the 'overseer' script
-#commands-file=/path/to/somewhere/commands
 # directory that contains the forrestbot definition files for each site
 #config-dir=/path/to/somewhere/conf
 #
@@ -31,21 +15,27 @@
 #logs-dir=/path/to/somewhere/logs
 #
 # URLs (for HTML links)
-#build-url=build
-#logs-url=logs
+#build-url=http://somedomain/path/to/builds
+#
+# this will debug ALL output from the 'build' and 'deploy' processes that are started
+#debug-exec=false
+# 
+# seconds to wait before refreshing log viewing page
+#refreshrate=60
+#
+# customize what targets to run (e.g. "build notify.special")
+#targets.build=build
+#targets.deploy=deploy
 
-forrest-exec=d:/sandbox/xml-forrest/build/dist/shbat/bin/forrest.bat
+forrest-exec=c:/path/to/forrest/bin/forrest.bat
 
-#commands-file=/home/dpb2/forrest/xml-forrest/scratchpad/forrestbot2/commands
-#config-dir=/home/dpb2/forrest/xml-forrest/scratchpad/forrestbot2
-config-dir=d:/sandbox/javadev/forrestbot2
+config-dir=c:/path/to/forrestbot/projects
+logs-dir=c:/some/path/to/build/logs
+build-dir=c:/some/path/to/build/sites
+build-url=http://127.0.0.1/myprojects
 
-build-dir=d:/sandbox/javadev/forrest/build/site/projects-build
-logs-dir=d:/sandbox/javadev/forrest/build/site/projects-logs
-#build-url=/projects-build
-#logs-url=/projects-logs
-build-url=file:///d:/sandbox/javadev/forrest/build/site/projects-build
-logs-url=file:///d:/sandbox/javadev/forrest/build/site/projects-logs
-
-# seconds
+debug-exec=false
 refreshrate=60
+
+targets.build=build
+targets.deploy=deploy
