--- a/scratchpad/forrestbot2/webapp/.classpath
+++ b/scratchpad/forrestbot2/webapp/.classpath
@@ -13,5 +13,8 @@
     <classpathentry kind="var" path="MAVEN_REPO/commons-collections/jars/commons-collections-2.1.jar"/>
     <classpathentry kind="var" path="MAVEN_REPO/commons-validator/jars/commons-validator-1.0.2.jar"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.4"/>
+    <classpathentry kind="lib" path="lib/oscore-2.2.2.jar"/>
+    <classpathentry kind="lib" path="lib/propertyset-1.2.jar"/>
+    <classpathentry kind="lib" path="lib/osuser-1.0-dev.jar" sourcepath="/osuser/src/java"/>
     <classpathentry kind="output" path="target/classes"/>
 </classpath>
