clean before build is the default now
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9713 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/documentation/content/xdocs/build.xml
+++ b/src/documentation/content/xdocs/build.xml
@@ -77,8 +77,8 @@ href="http://subversion.tigris.org/project_faq.html#proxy">this FAQ</link>.</not
      </source>
      <p>
        After updating the Forrest source from SVN, or after you have made changes, you
-       will need to build forrest again.  In Windows, run <code>build clean</code> then
-       <code>build</code>.  In Unix, run <code>./build.sh clean</code> then <code>./build.sh</code>
+       will need to build forrest again.  In Windows, run <code>build</code>.  In Unix,
+	   run <code>./build.sh</code>
      </p>
     </section>
 
