Provide an example forrest.validate.excludes
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9880 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/fresh-site/forrest.properties
+++ b/src/core/fresh-site/forrest.properties
@@ -79,7 +79,9 @@
 # *.failonerror=(true|false)    stop when an XML file is invalid
 #forrest.validate.failonerror=true
 
-# *.excludes=(pattern)         Comma-separated list of path patterns to not validate
+# *.excludes=(pattern)  Comma-separated list of path patterns to not validate
+# e.g.
+#forrest.validate.excludes=samples/subdir/**, samples/faq.xml
 #forrest.validate.excludes=
 
 
