Move context targets from forrest.build.xml to targets/context Use skinconf DTD. Use xmlvalidate for skinconf Create a upgradeskinconf.xsl for old skinconf.xml files
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9890 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -211,9 +211,14 @@
     </taskdef>
     <!-- skinconf.xml -->
     <echo message="validating **/skinconf.xml ..."/>
-    <jing compactSyntax="true" rngfile="./src/core/context/resources/schema/relaxng/skinconf.rnc">
-      <fileset dir="./src/core" includes="**/skinconf.xml"/>
-    </jing>
+    <xmlvalidate failonerror="true" lenient="no" warn="yes">
+      <xmlcatalog >
+        <dtd publicId="-//APACHE//DTD Skin Configuration V0.6//EN"
+        location="src/core/context/resources/schema/dtd/skinconfig-v06.dtd"/>
+      </xmlcatalog>
+      <fileset dir="./src/core"
+        includes="**/skinconf.xml" />
+    </xmlvalidate>
     <!-- All stylesheets **/*.xsl -->
     <echo message="validating stylesheets **/*.xsl ..."/>
     <jing rngfile="./src/core/context/resources/schema/relaxng/xslt.rng">
