--- a/scratchpad/forrestbot2/webapp/src/conf/settings.properties
+++ b/scratchpad/forrestbot2/webapp/src/conf/settings.properties
@@ -1,26 +1,14 @@
-# Copyright 2002-2004 The Apache Software Foundation
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 # settings.properties is used to configure the webapp to look
 # in certain locations for files and directories
 #
-# all of the following should be absolute
+# all of the following must be absolute
 #
 # forrest executable
 #forrest-exec=/path/to/xml-forrest/bin/forrest
 #forrest-exec=d:/path/to/xml-forrest/bin/forrest.bat
 #
+# this file is created by the webapp and used by the 'overseer' script
+#commands-file=/path/to/somewhere/commands
 # directory that contains the forrestbot definition files for each site
 #config-dir=/path/to/somewhere/conf
 #
@@ -29,27 +17,28 @@
 #logs-dir=/path/to/somewhere/logs
 #
 # URLs (for HTML links)
-#build-url=http://somedomain/path/to/builds
-#
+#build-url=build
+#logs-url=logs
+
+forrest-exec=d:/sandbox/xml-forrest/build/dist/shbat/bin/forrest.bat
+
 # this will debug ALL output from the 'build' and 'deploy' processes that are started
-#debug-exec=false
-# 
-# seconds to wait before refreshing log viewing page
-#refreshrate=60
-#
-# customize what targets to run (e.g. "build notify.special")
-#targets.build=build
-#targets.deploy=deploy
-
-forrest-exec=c:/path/to/forrest/bin/forrest.bat
-
-config-dir=c:/path/to/forrestbot/projects
-logs-dir=c:/some/path/to/build/logs
-build-dir=c:/some/path/to/build/sites
-build-url=http://127.0.0.1/myprojects
-
 debug-exec=false
+
+#commands-file=/home/dpb2/forrest/xml-forrest/scratchpad/forrestbot2/commands
+#config-dir=/home/dpb2/forrest/xml-forrest/scratchpad/forrestbot2
+config-dir=d:/sandbox/javadev/forrestbot2
+
+build-dir=d:/sandbox/javadev/forrest/build/site/projects-build
+logs-dir=d:/sandbox/javadev/forrest/build/site/projects-logs
+#build-url=/projects-build
+#logs-url=/projects-logs
+build-url=file:///d:/sandbox/javadev/forrest/build/site/projects-build
+logs-url=file:///d:/sandbox/javadev/forrest/build/site/projects-logs
+
+# seconds
 refreshrate=60
 
+# customize what targets to run (e.g. "build notify.special")
 targets.build=build
 targets.deploy=deploy
