--- a/etc/cocoon_upgrade/build.xml
+++ b/etc/cocoon_upgrade/build.xml
@@ -25,6 +25,7 @@
        =============================================================== -->
        <property name="cocoon.home"              location="../../../../cocoon-2.1"/>
        <property name="forrest.root"             location="../../"/>
+       <property name="forrest.build"            location="../../build/dist/shbat"/>
   </target>
 
   <target name="import-cocoon-xconf" depends="init">
@@ -32,5 +33,11 @@
        <outputproperty name="indent" value="yes"/>
     </xslt>
   </target>
+  <target name="fix-endorsed-libs-problem" depends="init">
+     <move todir="${forrest.build}/lib/endorsed">
+        <fileset dir="${forrest.build}/lib/core" includes="jakarta-*.jar"/>
+     </move>
+  </target>
+
 
 </project>
