--- a/etc/cocoon_upgrade/local.blocks.properties
+++ b/etc/cocoon_upgrade/local.blocks.properties
@@ -1,33 +1,40 @@
 
-
-# Copyright 2002-2004 The Apache Software Foundation
+#  Copyright 1999-2004 The Apache Software Foundation
 #
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
+#  Licensed under the Apache License, Version 2.0 (the "License");
+#  you may not use this file except in compliance with the License.
+#  You may obtain a copy of the License at
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+#      http://www.apache.org/licenses/LICENSE-2.0
 #
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
+#  Unless required by applicable law or agreed to in writing, software
+#  distributed under the License is distributed on an "AS IS" BASIS,
+#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#  See the License for the specific language governing permissions and
+#  limitations under the License.
+#
 
 #------------------------------------------------------------------------------#
 #                             Cocoon Blocks                                    #
 #------------------------------------------------------------------------------#
 
-# Remove blocks from your cocoon distribution by uncommenting the
-# corresponding exclude property.
+# Remove blocks from your cocoon distribution by setting the corresponding
+# include property to true or false. The blocks are included by default, i.e. if
+# no property was set.
 
 # NOTE: Don't modify this file directly but make a copy named
-# 'local.blocks.properties' and modify that. The build system will override
-# these properties with the ones in the 'local.blocks.properties' file.
+# 'local.blocks.properties' and modify that. The build system will first load
+# 'local.blocks.properties' and properties are immutable in Ant.
 
 # NOTE: "[dependency]" indicates blocks that are required by other blocks.
 # Disabling batik, for example, will result in a RuntimeException when using
-# fop. On the other hand some dependencies come only from the block samples.
+# fop. Dependencies only needed for the block's samples are marked explicitely.
+# This latter information was introduced only short time ago, so do not expect
+# it to be complete.
+
+# NOTE: (to Cocoon committers): blocks.properties is generated from gump.xml
+# using "build generate-blocks.properties". Any changes to blocks definitions
+# must be made in gump.xml, not here.
 
 
 # Stable blocks ----------------------------------------------------------------
@@ -39,42 +46,48 @@
 
 #-----[dependency]: "authentication-fw" depends on "session-fw".
 #-----[dependency]: "authentication-fw" is needed by "portal", "portal-fw".
-exclude.block.authentication-fw=true
+include.block.authentication-fw=false
 #-----[dependency]: "batik" is needed by "fop", "scratchpad".
-#exclude.block.batik=true
-exclude.block.bsf=true
-#exclude.block.chaperon=true
+include.block.batik=true
+include.block.bsf=false
+#-----[dependency]: "chaperon" depends on "xsp" (for samples).
+include.block.chaperon=true
+#-----[dependency]: "databases" depends on "xsp".
 #-----[dependency]: "databases" is needed by "hsqldb", "jms", "ojb", "petstore", "repository", "xmldb".
-exclude.block.databases=true
+include.block.databases=false
 #-----[dependency]: "fop" depends on "batik".
-#exclude.block.fop=true
+include.block.fop=true
 #-----[dependency]: "hsqldb" depends on "databases".
 #-----[dependency]: "hsqldb" is needed by "jms", "petstore".
-exclude.block.hsqldb=true
+include.block.hsqldb=false
 #-----[dependency]: "html" is needed by "portal".
-#exclude.block.html=true
-exclude.block.itext=true
-exclude.block.jfor=true
-exclude.block.jsp=true
-exclude.block.jxforms=true
-#exclude.block.linkrewriter=true
-#exclude.block.lucene=true
-exclude.block.naming=true
-exclude.block.paranoid=true
-exclude.block.php=true
-exclude.block.poi=true
+include.block.html=true
+include.block.itext=false
+include.block.jfor=false
+include.block.jsp=false
+#-----[dependency]: "linkrewriter" depends on "xsp".
+include.block.linkrewriter=true
+include.block.lucene=true
+include.block.naming=false
+include.block.paranoid=false
+include.block.php=false
+include.block.poi=false
 #-----[dependency]: "portal-fw" depends on "authentication-fw", "session-fw".
-exclude.block.portal-fw=true
-#exclude.block.profiler=true
-exclude.block.python=true
+include.block.portal-fw=false
+include.block.profiler=true
+#-----[dependency]: "python" depends on "xsp".
+include.block.python=false
+#-----[dependency]: "session-fw" depends on "xsp".
 #-----[dependency]: "session-fw" is needed by "authentication-fw", "portal", "portal-fw".
-exclude.block.session-fw=true
-exclude.block.swf=true
+include.block.session-fw=false
+include.block.swf=false
 #-----[dependency]: "velocity" is needed by "petstore", "scratchpad".
-exclude.block.velocity=true
-exclude.block.web3=true
+include.block.velocity=false
+include.block.web3=false
 #-----[dependency]: "xmldb" depends on "databases".
-exclude.block.xmldb=true
+include.block.xmldb=false
+#-----[dependency]: "xsp" is needed by "chaperon", "databases", "eventcache", "forms", "linkrewriter", "python", "scratchpad", "session-fw", "woody".
+include.block.xsp=true
 
 # Unstable blocks --------------------------------------------------------------
 
@@ -86,50 +99,58 @@ exclude.block.xmldb=true
 # its development as things might change over time before they are marked
 # stable.
 
-#-----[dependency]: "apples" depends on "woody".
-exclude.block.apples=true
+#-----[dependency]: "apples" depends on "forms" (for samples).
+include.block.apples=false
 #-----[dependency]: "asciiart" is needed by "mail".
-#exclude.block.asciiart=true
-exclude.block.axis=true
+include.block.asciiart=true
+include.block.axis=false
 #-----[dependency]: "cron" is needed by "scratchpad".
-exclude.block.cron=true
-exclude.block.deli=true
-#-----[dependency]: "eventcache" is needed by "jms", "repository", "slide".
-exclude.block.eventcache=true
-#-----[dependency]: "jms" depends on "databases", "eventcache", "hsqldb".
+include.block.cron=false
+include.block.deli=false
+#-----[dependency]: "eventcache" depends on "xsp" (for samples).
+#-----[dependency]: "eventcache" is needed by "jms", "repository".
+include.block.eventcache=false
+#-----[dependency]: "forms" depends on "xsp" (for samples).
+#-----[dependency]: "forms" is needed by "apples", "javaflow", "ojb", "petstore".
+include.block.forms=false
+#-----[dependency]: "javaflow" depends on "forms", "ojb".
+include.block.javaflow=false
+#-----[dependency]: "jms" depends on "databases" (for samples), "eventcache", "hsqldb".
 #-----[dependency]: "jms" is needed by "slide".
-exclude.block.jms=true
-exclude.block.linotype=true
-#-----[dependency]: "mail" depends on "asciiart".
-exclude.block.mail=true
-exclude.block.midi=true
-#-----[dependency]: "ojb" depends on "databases".
-exclude.block.ojb=true
-#-----[dependency]: "petstore" depends on "databases", "hsqldb", "velocity", "woody".
-exclude.block.petstore=true
+include.block.jms=false
+include.block.linotype=false
+#-----[dependency]: "mail" depends on "asciiart", "scratchpad".
+include.block.mail=false
+include.block.midi=false
+#-----[dependency]: "ojb" depends on "databases", "forms" (for samples).
+#-----[dependency]: "ojb" is needed by "javaflow".
+include.block.ojb=false
+#-----[dependency]: "petstore" depends on "databases", "forms", "hsqldb", "velocity".
+include.block.petstore=false
 #-----[dependency]: "portal" depends on "authentication-fw", "html", "session-fw".
-exclude.block.portal=true
-exclude.block.precept=true
-exclude.block.proxy=true
-exclude.block.qdox=true
+include.block.portal=false
+include.block.proxy=false
+include.block.qdox=false
 #-----[dependency]: "repository" depends on "databases", "eventcache".
 #-----[dependency]: "repository" is needed by "slide", "webdav".
-exclude.block.repository=true
-#-----[dependency]: "scratchpad" depends on "batik", "cron", "velocity".
-exclude.block.scratchpad=true
-#-----[dependency]: "slide" depends on "eventcache", "jms", "repository".
-exclude.block.slide=true
-exclude.block.slop=true
-exclude.block.stx=true
-exclude.block.taglib=true
+include.block.repository=false
+#-----[dependency]: "scratchpad" depends on "batik" (for samples), "cron", "velocity", "xsp".
+#-----[dependency]: "scratchpad" is needed by "mail".
+include.block.scratchpad=false
+#-----[dependency]: "slide" depends on "jms", "repository".
+include.block.slide=false
+include.block.slop=false
+include.block.stx=false
+include.block.taglib=false
 #-----[dependency]: "webdav" depends on "repository".
-exclude.block.webdav=true
-#-----[dependency]: "woody" is needed by "apples", "petstore".
-exclude.block.woody=true
+include.block.webdav=false
 
 # Deprecated blocks ------------------------------------------------------------
 
 # Although some of these blocks may have been stable, they are now deprecated
-# in favour of other blocks and therefore are excluded by default from the build
+# in favour of other blocks and therefore are excluded by default from the build.
+# For including one of them you have to set the exclude property into comment in
+# blocks.properties.
 
-exclude.block.xmlform=true
+#-----[dependency]: "woody" depends on "xsp" (for samples).
+include.block.woody=false
