Minor comment TODO
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/branches/copyless@10148 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -239,6 +239,7 @@
     -->
   </target>
  
+  <!-- TODO: to be replaced by the build target once thhere is no more copying -->
   <target name="refresh-code" depends="jar">
     <copy todir="${dist-shbat.dir}/lib/core">
       <fileset dir="${build.dir}" includes="*.jar"/>
