Remove DTD from skinconf and make it validate as simple XML.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/branches/copyless@10172 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -212,6 +212,7 @@
     <!-- skinconf.xml -->
     <echo message="validating **/skinconf.xml ..."/>
     <xmlvalidate failonerror="true" lenient="no" warn="yes">
+      <attribute name="http://apache.org/xml/features/validation/dynamic"  value="true"/>
       <xmlcatalog >
         <dtd publicId="-//APACHE//DTD Skin Configuration V0.6//EN"
         location="src/core/context/resources/schema/dtd/skinconfig-v06.dtd"/>
