Use force to overwrite the contents of cocoon.xconf
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@10356 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/cocoon_upgrade/build.xml
+++ b/etc/cocoon_upgrade/build.xml
@@ -29,7 +29,7 @@
   </target>
 
   <target name="import-cocoon-xconf" depends="init">
-     <xslt in="${cocoon.home}/src/webapp/WEB-INF/cocoon.xconf" out="${forrest.build}/context/WEB-INF/cocoon.xconf" style="./upgrade-cocoon-xconf.xsl" >
+     <xslt force="true" in="${cocoon.home}/src/webapp/WEB-INF/cocoon.xconf" out="${forrest.build}/context/WEB-INF/cocoon.xconf" style="./upgrade-cocoon-xconf.xsl" >
        <outputproperty name="indent" value="yes"/>
     </xslt>
   </target>
