iso time format in logs
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/branches/copyless@10431 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/forrestbot2/core/build.xml
+++ b/scratchpad/forrestbot2/core/build.xml
@@ -19,7 +19,7 @@
   <property name="build.work-dir"         location="work/${ant.project.name}"/>
   <property name="build.site-dir"         location="build/${ant.project.name}"/>
   <tstamp>
-    <format property="logtime" pattern="yyMMdd-hhmm"/>
+    <format property="logtime" pattern="yyyyMMddHHmmss"/>
   </tstamp>
 
   <property name="build.log-dir" location="logs"/>
