Add link to the SVN Book.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@10715 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/documentation/content/xdocs/build.xml
+++ b/src/documentation/content/xdocs/build.xml
@@ -34,6 +34,9 @@ href="http://subversion.tigris.org/project_faq.html#proxy">this FAQ</link>.</not
         <p>In case you want to update your Forrest source tree to the current version, change to the 
 "<code>forrest</code>" directory and invoke "<code>svn up</code>".</p> 
         <p>To see what changes you've made, invoke "<code>svn stat</code>"</p>
+        <p>SVN is really powerful. See
+          <link href="http://svnbook.red-bean.com/">Version Control with Subversion</link> - the opensource SVN book.
+        </p>
       </section> 
     </section>
 
