Add description for the "patch" task.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@10717 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -454,7 +454,8 @@
   <!-- =================================================================== -->
   <!-- Use Apache Ant to generate a patch file                             -->
   <!-- =================================================================== -->
-    <target name="patch">
+    <target name="patch"
+        description="Create a patch from your working copy, ready for contribution">
       <ant antfile="tools/targets/patch.xml" target="patchpackage"/>
     </target>
 
