--- a/src/documentation/content/xdocs/build.xml
+++ b/src/documentation/content/xdocs/build.xml
@@ -28,7 +28,7 @@
 href="http://subversion.tigris.org/project_faq.html#proxy">this FAQ</link>.</note>
         <ol> 
           <li>Make sure you have a recent release of <link href="http://subversion.tigris.org/">Subversion</link> installed.</li>
-          <li>At a command prompt, enter "<code>svn co http://svn.apache.org/repos/asf/xml/forrest/trunk forrest</code>"</li>
+          <li>At a command prompt, enter "<code>svn co http://svn.apache.org/repos/asf/xml/forrest/trunk forrest</code>" (committers should replace <code>http</code> with <code>https</code>)</li>
           <li>This will create a directory called "<code>forrest</code>" where the Forrest source will be stored.</li> 
         </ol> 
         <p>In case you want to update your Forrest source tree to the current version, change to the 
