update w/ new forrestbot location; clean another non-src dir
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@20433 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -51,7 +51,7 @@
     
     <property name="src-fresh-site"         location="src/core/fresh-site"/>
     
-    <property name="forrestbot.dir"         location="scratchpad/forrestbot2"/>
+    <property name="forrestbot.dir"         location="src/forrestbot"/>
 
     <buildnumber file="etc/build.number"/>
     <echo>
@@ -85,6 +85,7 @@
     <delete dir="${forrestbot.dir}/logs"/>
     <delete dir="${forrestbot.dir}/work"/>
     <delete dir="${forrestbot.dir}/build"/>
+    <delete dir="${forrestbot.dir}/sites"/>
     <delete dir="${forrestbot.dir}/webapp/target"/>
     <delete dir="${forrestbot.dir}/webapp/maven.log"/>
     <delete dir="src/core/context/WEB-INF/logs"/>
