--- a/src/forrestbot/webapp/src/conf/log4j.properties
+++ b/src/forrestbot/webapp/src/conf/log4j.properties
@@ -15,6 +15,10 @@
 #log4j.rootLogger=DEBUG, socket, stdout
 log4j.rootLogger=WARN, stdout
 
+# keep other log messages to a minimum
+log4j.logger.org.apache.struts=ERROR
+log4j.logger.org.apache.commons=ERROR
+
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.SimpleLayout
 
