Add note to set FORREST_HOME and PATH
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@20494 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -301,6 +301,19 @@
   <target name="jar" depends="init, compile">
     <jar destfile="${build.dir}/xml-forrest.jar"
       basedir="${build.classes}"/>
+    <echo>
+  *-----------------------------------------------------------------
+  | installation notice 
+  *-----------------------------------------------------------------
+  | You have built the distribution of Forrest.
+  | Please set the environment variable FORREST_HOME point to src/core
+  | It is recommended to add
+  |    unix: $FORREST_HOME/bin: to your $PATH
+  |    win: %FORREST_HOME%\bin; to your %PATH%
+  | Then do 'forrest -projecthelp' to list options for the 'forrest' command
+  | More help at http://xml.apache.org/forrest/
+  *-----------------------------------------------------------------
+    </echo>
   </target>
 
   <!-- =================================================================== -->
