Missing step to upgrade cocoon
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@20772 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/cocoon_upgrade/build.xml
+++ b/etc/cocoon_upgrade/build.xml
@@ -38,6 +38,11 @@
         <fileset dir="${forrest.build}/lib/core" includes="jakarta-*.jar"/>
      </move>
   </target>
+  <target name="local-build-cocoon" depends="init">
+     <copy todir="${cocoon.home}">
+        <fileset dir="." includes="local.*.properties"/>
+     </copy>
+  </target>
 
 
 </project>
