build/dist/shbat is not longer used. Debug off
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@20781 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/cocoon_upgrade/build.xml
+++ b/etc/cocoon_upgrade/build.xml
@@ -25,7 +25,7 @@
        =============================================================== -->
        <property name="cocoon.home"              location="../../../../cocoon-2.1"/>
        <property name="forrest.root"             location="../../"/>
-       <property name="forrest.build"            location="../../build/dist/shbat"/>
+       <property name="forrest.build"            location="../../src/core"/>
   </target>
 
   <target name="import-cocoon-xconf" depends="init">
