--- a/etc/cocoon_upgrade/local.build.properties
+++ b/etc/cocoon_upgrade/local.build.properties
@@ -25,7 +25,7 @@
 
 exclude.webapp.documentation=true
 exclude.webapp.javadocs=true
-exclude.webapp.samples=true
+#exclude.webapp.samples=true
 
 # ---- Build Exclusions --------------------------------------------------------
 
@@ -103,7 +103,7 @@ build.standalone.demo=${build.root}/standalone-demo
 # ---- Compilation -------------------------------------------------------------
 
 compiler=modern
-compiler.debug=on
+compiler.debug=off
 compiler.optimize=on
 compiler.deprecation=off
 compiler.nowarn=on
