--- a/src/core/context/WEB-INF/web.xml
+++ b/src/core/context/WEB-INF/web.xml
@@ -213,12 +213,12 @@
 
       The default directory is "cocoon-files" directory in the servlet
       context's temp directory (context property javax.servlet.context.tempdir).
+    -->
 
     <init-param>
       <param-name>work-directory</param-name>
-      <param-value>WEB-INF/work</param-value>
+      <param-value>../tmp/cocoon-work</param-value>
     </init-param>
-    -->
 
     <!--
       This parameter allows to specify additional directories or jars
