Add missing xdocs from the validate.exclude property. Allowing to exclude files.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@20937 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/fresh-site/forrest.properties
+++ b/src/core/fresh-site/forrest.properties
@@ -81,8 +81,8 @@
 
 # *.excludes=(pattern)  Comma-separated list of path patterns to not validate
 # e.g.
-#forrest.validate.excludes=samples/subdir/**, samples/faq.xml
-#forrest.validate.excludes=
+#forrest.validate.xdocs.excludes=samples/subdir/**, samples/faq.xml
+#forrest.validate.xdocs.excludes=
 
 
 ##############
