Move url to http://forrest.apache.org/
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@20964 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/documentation/content/xdocs/build.xml
+++ b/src/documentation/content/xdocs/build.xml
@@ -59,7 +59,7 @@ href="http://subversion.tigris.org/project_faq.html#proxy">this FAQ</link>.</not
   |    unix: $FORREST_HOME/bin: to your $PATH
   |    win: %FORREST_HOME%\bin; to your %PATH%
   | Then do 'forrest -projecthelp' to list options for the 'forrest' command
-  | More help at http://xml.apache.org/forrest/
+  | More help at http://forrest.apache.org/
   *-----------------------------------------------------------------
      </source>
      <p>
