Fix more old Forrest URLs.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@20966 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -227,7 +227,7 @@
   |    unix: $FORREST_HOME/bin/forrest -projecthelp
   |    win: %FORREST_HOME%\bin\forrest -projecthelp
   | will list options for the 'forrest' command
-  | More help at http://xml.apache.org/forrest/ and forrest-dev@xml.apache.org
+  | More help at http://forrest.apache.org/ and forrest-dev@xml.apache.org
   *-----------------------------------------------------------------
     </echo>
   </target>
@@ -311,7 +311,7 @@
   |    unix: $FORREST_HOME/bin: to your $PATH
   |    win: %FORREST_HOME%\bin; to your %PATH%
   | Then do 'forrest -projecthelp' to list options for the 'forrest' command
-  | More help at http://xml.apache.org/forrest/
+  | More help at http://forrest.apache.org/
   *-----------------------------------------------------------------
     </echo>
   </target>
